# LLM-eval

./: .env.example  .gitignore  COMPLETE.md  GITHUB_ACTIONS.md  INSTALL.md  LOCAL_SETUP.md  M1_COMPLETE.md  QUICKSTART.md  README.md  START_HERE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yaml  regression.yaml
configs/: models.yaml
data/metrics/: test.db
data/tasks/json_extraction/: slices.yaml  test.jsonl  train.jsonl  validation.jsonl
data/tasks/qa/: slices.yaml  test.jsonl  train.jsonl  validation.jsonl
notebooks/: results_analysis.ipynb
scripts/: compare_runs.py  generate_datasets.py  generate_qa_dataset.py  run_eval.py  test_pipeline.py  train_qlora.py
sessions/: session1.md  session2.md
src/llm_eval/: __init__.py  runner.py
src/llm_eval/ci/: thresholds.py
src/llm_eval/finetune/: qlora_trainer.py
src/llm_eval/metrics/: collector.py  exporters.py  storage.py
src/llm_eval/models/: __init__.py  api_model.py  base.py  hf_model.py
src/llm_eval/observability/: tracer.py
src/llm_eval/scorers/: deterministic.py  llm_judge.py
src/llm_eval/tasks/: json_extraction.py  qa_task.py
